# agamotto

./: .env.example  .gitignore  README.md  render.yaml
api/: .dockerignore  .gitignore  Dockerfile  README.md  generate_static_json.py  generate_synthetic_matches.py  pyproject.toml
api/agamotto/: __init__.py
api/agamotto/api/: deps.py  main.py  schemas.py
api/agamotto/api/routes/: analyze.py  matches.py  multiverse.py  players.py  predict.py  simulation.py  teams.py  validation.py  venues.py
api/agamotto/cli/: main.py
api/agamotto/core/: __init__.py  config.py  db.py  enums.py  ids.py  logging.py
api/agamotto/db/: __init__.py  models.py
api/agamotto/ingestion/: __init__.py  base.py  fifa_2026.py  martj42.py  sofascore_scraper.py  squads_csv.py  stats_enricher.py  wikipedia_squads.py
api/agamotto/ingestion/seed/: fixtures_2026.py  groups_2026.py  teams_2026.py  venues_2026.py
api/agamotto/models/: __init__.py  backtest.py  cache_predictions.py  calibration.py  club_tiers.py  dixon_coles.py  elo.py  ensemble.py  features.py  optimize.py  player_impact.py  poisson.py  stacker.py
api/agamotto/multiverse/: __init__.py  engine.py
api/agamotto/simulator/: __init__.py  bracket.py  tournament.py
api/data/raw/: squads_wikipedia.csv
api/migrations/: env.py
api/migrations/versions/: 3d1e9897ec25_add_historical_match_stats.py  603dea087504_initial_schema.py
api/tests/: conftest.py  test_ids.py  test_leakage.py  test_models.py  test_multiverse.py  test_pipeline.py  test_seed_data.py  test_simulator.py
claude_design/: .thumbnail  components-wc.jsx  (+5 more)
(+80 files in other folders)
