[project]
name = "agamotto"
version = "0.1.0"
description = "Plataforma predictiva multiverso del Mundial FIFA 2026"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agamotto" }]
license = { text = "Academic use only" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "joblib>=1.3",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-requests",
]
mlflow = ["mlflow>=2.11"]

[project.scripts]
agamotto = "agamotto.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agamotto*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
